# mario_bros_nes_ai

./: .gitignore  README.md  pyproject.toml
src/mario_ai/saves/: nn.json
