[tool.poetry]
name = "mario_bros_nes_ai"
version = "0.1.0"
description = ""
authors = ["Clotaire MARDON <clotaire.mardon@ensc.fr>"]
readme = "README.md"
packages = [{include = "mario_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
